--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@gatekit/sdk": "^1.2.1",
-    "axios": "^1.6.0",
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "axios": "^1.6.0"
   },
   "peerDependencies": {
     "typescript": ">=4.5.0"
