feat: update CLI to v1.2.2

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@gatekit/sdk": "^1.2.2",
+    "@gatekit/sdk": "latest",
     "commander": "^14.0.1",
     "axios": "^1.12.2"
   },
