--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gatekit/cli",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Official CLI for GateKit universal messaging gateway",
   "main": "dist/index.js",
   "bin": {
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "test": "echo \"No tests for generated CLI - tested in backend\"",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
